tests/negative/typecheck/sum.orng
fn main() -> Int {
    let x: Int = x | y
    x
}